ghc-4335c07/testsuite/tests/polykinds/PolyKinds02.stderr

PolyKinds02.hs:13:16: error:
    • Expected kind ‘Nat’, but ‘Nat’ has kind ‘*’
    • In the second argument of ‘Vec’, namely ‘Nat’
      In the type signature:
        vec :: Vec Nat Nat
